# qnlp-toolkit

./: .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  cbuild.sh  install.sh
include/: bpe.h  car_tokenizer.h  char_tokenizer.h  embeddings.h  en_tokenizer.h  fr_tokenizer.h  generalization.h  processor.h  spm.h  stemmer.h  stopwords.h  tokenizer.h  utils.h
src/: CMakeLists.txt  bpe.cc  bpe.cpp  car_tokenizer.cpp  char_tokenizer.cpp  embeddings.cc  embeddings.cpp  en_tokenizer.cc  en_tokenizer.cpp  fr_tokenizer.cc  fr_tokenizer.cpp  generalization.cc  generalization.cpp  spm.cpp  stemmer.cc  stemmer.cpp  stopwords.cc  tokenizer.cc  tokenizer.cpp  utils.cc  utils.cpp
test/: CMakeLists.txt  lang_car.tok  lang_en.tok  lang_fr.tok  lang_xx.tok  lang_xx.txt  main_NLP.cc  main_NLP.cpp  main_filtering.cc  main_filtering.cpp  main_tokenizer.cpp  wiki.test.qtok.car  wiki.test.qtok.en  wiki.test.qtok.fr  wiki.test.qtok.lc.en  wiki.test.qtok.lc.fr  wiki.test.raw.car  wiki.test.raw.en  wiki.test.raw.fr  wikicounts.sorted
